Test 2: Ensure no negative time deltas in timing data, should all be dropped by now

--- a/MOOC-IRT Descriptive Analysis.ipynb
+++ b/MOOC-IRT Descriptive Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +136,7 @@
     "        r += 1\n",
     "    item_metadata['total_order'] = pd.Series(rank, item_metadata.index)\n",
     "\n",
-    "    # Plot item order in course against number of learners who viewed each item\n",
+    "    # Plot item order in course against number of learners who viewed each item or unobserved indicator\n",
     "    ordering = item_metadata['total_order']\n",
     "    views = item_metadata['view_count']\n",
     "    unobserved = item_metadata['zeros']\n",
@@ -148,6 +148,117 @@
     "    ydelt = 50\n",
     "    plt.xlim(-xdelt, ordering.max()+xdelt)\n",
     "    plt.ylim(views.min()-ydelt, views.max()+ydelt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Test 2: No negative time deltas\n",
+    "\n",
+    "The time_to_first_attempt (TTFA) and time_to_last_attempt (TTLA) matrices should not contain any negative numbers.\n",
+    "\n",
+    "Additionally, the difference between TTLA and TTFA should itself be not negative."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HumanitiesSciences_EP-101_Spring2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Medicine_ANES204_Fall2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "GlobalHealth_IWHHR_Summer2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Medicine_ANES205_Fall2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "HumanitiesandScience_StatLearning_Winter2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Engineering_QMSE-02_Winter2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Medicine_MedStats_Summer2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Medicine_MedStats._Summer2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Engineering_Compilers_Fall2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "EarthSciences_ResGeo202_Spring2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "HumanitiesSciences_Econ-1_Summer2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "HumanitiesSciences_Econ_1_Summer2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Engineering_QMSE-01_Fall2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Engineering_QMSE01._Autumn2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Education_115SP_2015\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n",
+      "Education_OpenKnowledge_Fall2014\n",
+      "\t TTFA: 0\n",
+      "\t TTLA: 0\n",
+      "\t DIFF: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for course in courses:\n",
+    "    print course\n",
+    "    \n",
+    "    ttfa = data[course]['time_to_first_attempt']\n",
+    "    ttfa_neg = ttfa.mask(ttfa >= 0).dropna(how='all')\n",
+    "    ttfa_issues = ttfa_neg.count().sum()\n",
+    "    print \"\\t TTFA: \" + str(ttfa_issues)\n",
+    "    \n",
+    "    ttla = data[course]['time_to_last_attempt']\n",
+    "    ttla_neg = ttla.mask(ttla >= 0).dropna(how='all')\n",
+    "    ttla_issues = ttla_neg.count().sum()\n",
+    "    print \"\\t TTLA: \" + str(ttla_issues)\n",
+    "    \n",
+    "    diff = ttla - ttfa\n",
+    "    diff_neg = diff.mask(diff >= 0).dropna(how='all')\n",
+    "    diff_issues = diff_neg.count().sum()\n",
+    "    print \"\\t DIFF: \" + str(diff_issues)"
    ]
   },
   {
