Finalize test 3, adjust plotting

--- a/MOOC-IRT Descriptive Analysis.ipynb
+++ b/MOOC-IRT Descriptive Analysis.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -96,8 +96,11 @@
    "outputs": [],
    "source": [
     "# Set up plots\n",
-    "fig = plt.figure(figsize=(20,25))\n",
-    "plt.subplots_adjust(hspace=0.8, wspace=0.2)\n",
+    "cols = 2\n",
+    "fig, axes = plt.subplots(nrows=(len(courses)+1)/cols, ncols=cols)\n",
+    "fig.set_figheight(40)\n",
+    "fig.set_figwidth(20)\n",
+    "plt.subplots_adjust(hspace=0.4, wspace=0.2)\n",
     "\n",
     "for idx, course in enumerate(courses):\n",
     "    # Get total number of learners who saw each item and ordering of items in the course\n",
@@ -124,19 +127,19 @@
     "        rank[item] = r\n",
     "        r += 1\n",
     "    item_metadata['total_order'] = pd.Series(rank, item_metadata.index)\n",
-    "\n",
+    "    \n",
     "    # Plot item order in course against number of learners who viewed each item or unobserved indicator\n",
     "    ordering = item_metadata['total_order']\n",
     "    views = item_metadata['view_count']\n",
     "    unobserved = item_metadata['zeros']\n",
-    "    subplot = fig.add_subplot(10,2,idx+1)\n",
-    "    subplot.set_title(course)\n",
-    "    plt.scatter(x=ordering, y=views, s=14, color='b')\n",
-    "    plt.scatter(x=ordering, y=unobserved, s=14, color='r')\n",
+    "    subp = axes[idx/2,int(idx%2!=0)]\n",
+    "    subp.set_title(course)\n",
+    "    subp.scatter(x=ordering, y=views, s=14, color='b')\n",
+    "    subp.scatter(x=ordering, y=unobserved, s=14, color='r')\n",
     "    xdelt = 5\n",
     "    ydelt = 50\n",
-    "    plt.xlim(-xdelt, ordering.max()+xdelt)\n",
-    "    plt.ylim(views.min()-ydelt, views.max()+ydelt)"
+    "    subp.set_xlim(-xdelt, ordering.max()+xdelt)\n",
+    "    subp.set_ylim(views.min()-ydelt, views.max()+ydelt)"
    ]
   },
   {
@@ -187,7 +190,11 @@
    "source": [
     "### Test 3: Learners take items in order\n",
     "\n",
-    "For each course, select a random subsample of learners and plot first_view time against item order."
+    "For each course, select a random subsample of learners and plot first_view time against rank order for each item.\n",
+    "\n",
+    "May not be a clear association in all courses-- ideally some will show as monotonically non-decreasing (that is, up and to the right with some plateaus), and some might show as relatively flat. Especially in a self-paced course, a course with low item count, or any other course where all items might have been released at once, the difference might be hard to see.\n",
+    "\n",
+    "At minimum, the graphs shouldn't be random or monotonically decreasing."
    ]
   },
   {
@@ -200,7 +207,7 @@
    "source": [
     "# Set up plots\n",
     "cols = 2\n",
-    "fig, axes = plt.subplots(nrows=len(courses)/cols, ncols=cols)\n",
+    "fig, axes = plt.subplots(nrows=(len(courses)+1)/cols, ncols=cols)\n",
     "fig.set_figheight(40)\n",
     "fig.set_figwidth(20)\n",
     "plt.subplots_adjust(hspace=0.4, wspace=0.2)\n",
@@ -225,7 +232,7 @@
     "    # Plot each learner\n",
     "    for i in range(sample_size):\n",
     "        row = fv_sample.iloc[i]\n",
-    "        row.plot(ax=axes[idx/2,int(idx%2==0)])\n",
+    "        row.plot(ax=axes[idx/2,int(idx%2!=0)])\n",
     "        axes[idx/2,int(idx%2==0)].set_title(course)\n",
     "    "
    ]
